--- a/dna.ipynb
+++ b/dna.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you have entered: 'ATGCTC'\n",
+      "the rev comp is: 'GAGCAT' \n"
+     ]
+    }
+   ],
    "source": [
     "def complement(DNA):\n",
     "    comp = {'A':'T', 'C':'G', 'G':'C', 'T':'A'}\n",
@@ -37,8 +46,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "4d2625e52ccf3af0dca9aea5839ab7f39be235e708acbd850a8e1a19fad02262"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.1 64-bit ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
